# snapcd

./: .drone.yml  .gitignore  Cargo.toml  README.md  bacon.toml  check.sh  clippy.sh  clippy.toml  rustfmt.toml
.cargo/: config.toml
benches/: my_benchmark.rs  perf.rs
doc/: crypto.md  reflog.md  transfer-protocol.md
docs/: commit-display.md  crypto.md  metalog.md  todo
libsnapcd/: Cargo.toml  TODO.txt
libsnapcd/benches/: my_benchmark.rs
libsnapcd/fuzz/: Cargo.toml
libsnapcd/fuzz/fuzz_targets/: fuzz_target_1.rs
libsnapcd/src/: base32.rs  cache.rs  chunker.rs  commit.rs  crypto.rs  diff.rs  dir.rs  entry.rs  file.rs  filter.rs  key.rs  keyish.rs  lib.rs  network.rs  object.rs
libsnapcd/src/ds/: mod.rs  null.rs  sqlite.rs
libsnapcd/tests/: tests.rs
snapcd/: Cargo.toml
snapcd/benches/: my_benchmark.rs
snapcd/doc/: crypto.md  hash-encoding.txt  reflog.md
snapcd/proptest-regressions/: key.txt  keyish.txt
snapcd/src/: cache.rs  crypto.rs  diff.rs  dir.rs  entry.rs  file.rs  filter.rs  key.rs  lib.rs  logging.rs  main.rs  network.rs  object.rs
snapcd/src/cmd/: checkout.rs  commit.rs  common.rs  debug.rs  diff.rs  fetch.rs  init.rs  insert.rs  log.rs  mod.rs  net.rs  reflog.rs  status.rs
snapcd/src/ds/: mod.rs  null.rs  sqlite.rs
snapcd/tests/: tests.proptest-regressions  tests.rs
snapcdd/: Cargo.toml  Rocket.toml
snapcdd/src/: main.rs
src/: base32.rs  cache.rs  commit.rs  diff.rs  dir.rs  display.rs  file.rs  filter.rs  fixedadler.rs  key.rs  keyish.rs  lib.rs  main.rs  object.rs
src/ds/: mod.rs  null.rs  rocks.rs  sled.rs  sqlite.rs
tests/: tests.proptest-regressions  tests.rs
