[package]
name = "snapcd"
version = "0.1.0"
authors = ["5225225 <5225225@mailbox.org>"]
edition = "2018"

[dependencies]
serde_cbor = "0.11.1"
serde = { version = "1.0.117", features = ["derive"] }
structopt = "0.3.20"
rusqlite = { version = "0.24.1", features = ["trace"] }
bitvec = "0.19.4"
hex = "0.4.2"
log = "0.4.11"
globset = "0.4.6"
dirs = "3.0.1"
either = "1.6.1"
colored = "2.0.0"
gearhash = "0.1.3"
static_assertions = "1.1.0"
serde_bytes = "0.11.5"
blake3 = "0.3.7"
thiserror = "1.0.22"
clap = "2.33.3"
diff = "0.1.12"
anyhow = "1.0.34"

simplelog = { version = "0.8.0", optional = true }
difference = "2.0.0"
patch = "0.5.0"
itertools = "0.9.0"

[features]
default = ["logging"]
logging = ["simplelog"]

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"
rand_chacha = "0.2.2"
proptest = "0.10.1"
proptest-derive = "0.2.0"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true
