[package]
name = "libsnapcd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.10.3"
anyhow = "1.0.45"
bitvec = "0.22.3"
blake3 = "1.2.0"
cap-std = "0.20.0"
colored = "2.0.0"
diff = "0.1.12"
difference = "2.0.0"
either = "1.6.1"
gearhash = "0.1.3"
getrandom = "0.2.3"
globset = "0.4.8"
itertools = "0.10.1"
minicbor = { version = "0.11.4", features = ["std", "derive"] }
patch = "0.5.0"
pretty-hex = "0.2.1"
rusqlite = "0.26.1"
static_assertions = "1.1.0"
thiserror = "1.0.30"
tracing = "0.1.29"
ureq = "2.3.0"

[dev-dependencies]
cap-tempfile = "0.20.0"
criterion = "0.3.5"
fastrand = "1.5.0"
proptest = "1.0.0"
rand = "0.8.4"
rand_chacha = "0.3.1"

[[bench]]
name = "my_benchmark"
harness = false
