[package]
name = "libsnapcd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.10.3"
anyhow = "1.0.51"
bitvec = "0.22.3"
blake3 = "1.2.0"
cap-std = "0.22.0"
colored = "2.0.0"
gearhash = "0.1.3"
getrandom = "0.2.3"
globset = "0.4.8"
itertools = "0.10.3"
minicbor = { version = "0.12.0", features = ["std", "derive"] }
pretty-hex = "0.2.1"
rusqlite = "0.26.3"
static_assertions = "1.1.0"
thiserror = "1.0.30"
tracing = "0.1.29"
ureq = "2.4.0"
# similar = "2.1.0" (use this for diffing)

[dev-dependencies]
cap-tempfile = "0.22.0"
criterion = "0.3.5"
fastrand = "1.6.0"
proptest = "1.0.0"
rand = "0.8.4"
rand_chacha = "0.3.1"

[[bench]]
name = "my_benchmark"
harness = false
