[package]
name = "snapcd"
version = "0.1.0"
authors = ["5225225 <5225225@mailbox.org>"]
edition = "2018"

[dependencies]
aes-gcm-siv = "0.10.3"
anyhow = "1.0.44"
bitvec = "0.22.3"
blake3 = "1.0.0"
cap-std = "0.19.1"
clap = "2.33.3"
colored = "2.0.0"
diff = "0.1.12"
difference = "2.0.0"
dirs = "4.0.0"
either = "1.6.1"
enum_dispatch = "0.3.7"
gearhash = "0.1.3"
globset = "0.4.8"
itertools = "0.10.1"
libsnapcd = { path = "../libsnapcd" }
minicbor = { version = "0.11.3", features = ["derive"] }
patch = "0.5.0"
pretty-hex = "0.2.1"
rand = "0.8.4"
rusqlite = { version = "0.26.1", features = ["trace"] }
serde = { version = "1.0.130", features = ["derive"] }
static_assertions = "1.1.0"
structopt = "0.3.23"
thiserror = "1.0.29"
tracing = "0.1.28"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.24"
ureq = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.1"
assert_fs = "1.0.5"
indoc = "1.0.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
tempfile = "3.2.0"
