[package]
name = "snapcd"
version = "0.1.0"
authors = ["5225225 <5225225@mailbox.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.45"
cap-std = "0.20.0"
clap = "2.33.3"
colored = "2.0.0"
dirs = "4.0.0"
enum_dispatch = "0.3.7"
libsnapcd = { path = "../libsnapcd" }
minicbor = { version = "0.11.4", features = ["derive", "alloc", "half"] }
rusqlite = { version = "0.26.1", features = ["trace"] }
structopt = "0.3.25"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.1"

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"
indoc = "1.0.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
tempfile = "3.2.0"
