[package]
name = "snapcdd"
version = "0.1.0"
authors = ["5225225 <5225225@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
sled = "0.34.6"
tokio = "1.4.0"
