[package]
name = "snapcdd"
version = "0.1.0"
authors = ["5225225 <5225225@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
sled = "0.34.7"
tokio = "1.13.0"
